--- a/404.html
+++ b/404.html
@@ -216,7 +216,7 @@
       
       <a
         class="block text-center text-2xl leading-[5rem] lg:text-base lg:font-normal"
-        href="/about/"
+        href="/post/about/"
         >主页</a
       >
       
