--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   />
 
   
-  <title>每天进步一点点a </title>
+  <title>小顾顾的个人博客</title>
 
   
   <meta name="theme-color" />
@@ -115,7 +115,7 @@
     rel="alternate"
     type="application/rss&#43;xml"
     href="https://hugo-paper.vercel.app/index.xml"
-    title="每天进步一点点a "
+    title="小顾顾的个人博客"
   />
   
 
@@ -126,17 +126,17 @@
   
   
   
-  <meta property="og:title" content="每天进步一点点a " />
+  <meta property="og:title" content="小顾顾的个人博客" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://hugo-paper.vercel.app/" />
 
   
-  <meta itemprop="name" content="每天进步一点点a ">
+  <meta itemprop="name" content="小顾顾的个人博客">
 <meta itemprop="description" content="">
   
   <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="每天进步一点点a "/>
+<meta name="twitter:title" content="小顾顾的个人博客"/>
 <meta name="twitter:description" content=""/>
 
   
@@ -149,7 +149,7 @@
     <a
       class="-translate-x-[1px] -translate-y-0.5 text-3xl font-bold"
       href="https://hugo-paper.vercel.app/"
-      >每天进步一点点a </a
+      >小顾顾的个人博客</a
     >
     <div
       class="btn-dark text-[0] ml-6 h-6 w-6 shrink-0 cursor-pointer [background:url(./theme.png)_left_center/_auto_theme('spacing.6')_no-repeat] [transition:_background-position_0.4s_steps(5)] dark:[background-position:right]"
@@ -339,7 +339,7 @@
 >
   <div class="mr-auto">
     &copy; 2023
-    <a class="link" href="https://hugo-paper.vercel.app/">每天进步一点点a </a>
+    <a class="link" href="https://hugo-paper.vercel.app/">小顾顾的个人博客</a>
   </div>
   <a class="link mx-6" href="https://gohugo.io/" rel="noopener" target="_blank"
     >Powered by Hugo️️</a
