--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
   />
 
   
-  <title>404 Page not found - 每天进步一点点a </title>
+  <title>404 Page not found - 小顾顾的个人博客</title>
 
   
   <meta name="theme-color" />
@@ -142,7 +142,7 @@
     <a
       class="-translate-x-[1px] -translate-y-0.5 text-3xl font-bold"
       href="https://hugo-paper.vercel.app/"
-      >每天进步一点点a </a
+      >小顾顾的个人博客</a
     >
     <div
       class="btn-dark text-[0] ml-6 h-6 w-6 shrink-0 cursor-pointer [background:url(./theme.png)_left_center/_auto_theme('spacing.6')_no-repeat] [transition:_background-position_0.4s_steps(5)] dark:[background-position:right]"
@@ -281,7 +281,7 @@
 >
   <div class="mr-auto">
     &copy; 2023
-    <a class="link" href="https://hugo-paper.vercel.app/">每天进步一点点a </a>
+    <a class="link" href="https://hugo-paper.vercel.app/">小顾顾的个人博客</a>
   </div>
   <a class="link mx-6" href="https://gohugo.io/" rel="noopener" target="_blank"
     >Powered by Hugo️️</a
