--- a/series/index.html
+++ b/series/index.html
@@ -53,7 +53,7 @@
   />
 
   
-  <title>Series - 每天进步一点点a </title>
+  <title>Series - 小顾顾的个人博客</title>
 
   
   <meta name="theme-color" />
@@ -115,7 +115,7 @@
     rel="alternate"
     type="application/rss&#43;xml"
     href="https://hugo-paper.vercel.app/series/index.xml"
-    title="每天进步一点点a "
+    title="小顾顾的个人博客"
   />
   
 
@@ -149,7 +149,7 @@
     <a
       class="-translate-x-[1px] -translate-y-0.5 text-3xl font-bold"
       href="https://hugo-paper.vercel.app/"
-      >每天进步一点点a </a
+      >小顾顾的个人博客</a
     >
     <div
       class="btn-dark text-[0] ml-6 h-6 w-6 shrink-0 cursor-pointer [background:url(./theme.png)_left_center/_auto_theme('spacing.6')_no-repeat] [transition:_background-position_0.4s_steps(5)] dark:[background-position:right]"
@@ -297,7 +297,7 @@
 >
   <div class="mr-auto">
     &copy; 2023
-    <a class="link" href="https://hugo-paper.vercel.app/">每天进步一点点a </a>
+    <a class="link" href="https://hugo-paper.vercel.app/">小顾顾的个人博客</a>
   </div>
   <a class="link mx-6" href="https://gohugo.io/" rel="noopener" target="_blank"
     >Powered by Hugo️️</a
